LIVIJUKU-362 - Kaikkien hakemusten urlit muotoon /hakemus/:id. Hakemuscontrolleria refaktoroitu samalla

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -12,6 +12,7 @@
       </button>
     </div>
 
+
     <div class="header__content clearfix" ng-class="{'is-visible': !$root.isCollapsed}">
       <ul class="nav navbar-nav">
 
@@ -21,14 +22,17 @@
           </a>
         </li>
 
-        <li class="header__button {{ 'app.hakija.hakemukset' | includedByState | toClass:'is-active' }}" ng-show="sallittu(user, 'view-oma-hakemus')">
+        <li class="header__button {{ ownApplicationTabActive() | toClass:'is-active' }}" ng-show="sallittu(user, 'view-oma-hakemus')">
           <a class="header__link" ui-sref="app.hakija.hakemukset.omat()">
             Omat hakemukset
           </a>
         </li>
 
-        <li class="header__button {{ 'hakemukset' | stateNameIncludes:['app.hakija.hakemukset.hakemus', 'app.hakija.hakemukset.omat'] | toClass:'is-active' }}"
-            ng-show="sallittu(user, 'view-kaikki-hakemukset')">
+        <li class="header__button
+          {{ ('hakemukset' | stateNameIncludes:['app.hakija.hakemukset.omat']) ||
+             ('app.hakemus' | isState) && !isOwnApplication()
+            | toClass:'is-active'
+          }}" ng-show="sallittu(user, 'view-kaikki-hakemukset')">
           <a class="header__link" ui-sref="app.yhteinen.hakemukset.list({tyyppi: 'AH0'})">
             Kaikki hakemukset
           </a>
