LIVIJUKU-398 Seurantalomake demo

--- a/app/scripts/components/statisticDropdown/index.html
+++ b/app/scripts/components/statisticDropdown/index.html
@@ -16,6 +16,11 @@
           Tunnuslukuraportit
         </a>
       </li>
+      <li>
+        <a ui-sref-active="is-active" ui-sref="app.yhteinen.seurantalomakedemo()">
+          Seurantalomake demo
+        </a>
+      </li>
     </ul>
   </div>
 </div>
