LIVIJUKU-392 Käyttäjälistaus palvelut backendiin ja toteuttaminen front:iin.

--- a/app/scripts/views/yhteinen/asetukset.html
+++ b/app/scripts/views/yhteinen/asetukset.html
@@ -16,9 +16,9 @@
             <p>{{organisaatio}}</p>
           </div>
           <div class="col-md-4">
-            <h5>Rooli</h5>
+            <h5>Roolit</h5>
 
-            <p>{{roolit}}</p>
+            <p>{{roolit | erotteleRoolit}}</p>
           </div>
         </div>
       </juku-form-row>
