--- a/app/scripts/views/yhteinen/kayttajatiedot.html
+++ b/app/scripts/views/yhteinen/kayttajatiedot.html
@@ -18,7 +18,7 @@
       <td>{{viranomainen.organisaationimi}}</td>
       <td>{{viranomainen.roolit | erotteleRoolit}}</td>
       <td>{{viranomainen.sahkoposti}}</td>
-      <td>{{viranomainen.viimeisin_kirjautuminen | date:'dd.MM.yyyy HH:mm:ss'}}</td>
+      <td>{{viranomainen.kirjautumisaika | date:'dd.MM.yyyy HH:mm:ss'}}</td>
     </tr>
      </tbody>
   </table>
