--- a/app/scripts/components/seurantalomakePaikallisliikenne/index.html
+++ b/app/scripts/components/seurantalomakePaikallisliikenne/index.html
@@ -5,12 +5,17 @@
         <tr>
           <th>Linjan numero tai nimi</th>
           <th>
-            <div tooltip="Linjan tyyppi merkitään sarakkeeseen rastilla (X)" tooltip-placement="top"
-                 tooltip-append-to-body="true">Linja-Auto<span class="glyphicon glyphicon-question-sign"></span></div>
+            <div tooltip="Valitse linja-, sopimus- tai kokonaissuorite" tooltip-placement="top"
+                 tooltip-append-to-body="true">Suoritetyyppi<span class="glyphicon glyphicon-question-sign"></span>
+            </div>
           </th>
           <th>
-            <div tooltip="Linjan tyyppi merkitään sarakkeeseen rastilla (X)" tooltip-placement="top"
-                 tooltip-append-to-body="true">Taksi<span class="glyphicon glyphicon-question-sign"></span></div>
+            <div tooltip="Linja-autojen lukumäärä" tooltip-placement="top"
+                 tooltip-append-to-body="true">Linja-autot<span class="glyphicon glyphicon-question-sign"></span></div>
+          </th>
+          <th>
+            <div tooltip="Taksien lukumäärä" tooltip-placement="top"
+                 tooltip-append-to-body="true">Taksit<span class="glyphicon glyphicon-question-sign"></span></div>
           </th>
           <th>
             <div tooltip="Varsinaisen paikallisliikenteen ajokilometrit"
@@ -37,10 +42,12 @@
         </thead>
         <tfoot>
           <tr>
-            <td colspan="3">
+            <td colspan="2">
               <button class="btn btn-primary" ng-click="lisaaRivi()">Lisää rivi</button>
               <span class="yhteensa">Yhteensä:</span>
             </td>
+            <td>{{linjaautotSumma() | currency : '' : 0}}</td>
+            <td>{{taksitSumma() | currency : '' : 0}}</td>
             <td>{{ajokmSumma() | currency : 'km'}}</td>
             <td>{{matkustajatSumma() | currency : '' : 0}}</td>
             <td>{{asiakastuloSumma() | currency}}</td>
@@ -54,8 +61,15 @@
             <td><input name="linja" type="text" class="form-control" noenter
                        select-on-click
                        ng-model="rivi.linja"></td>
-            <td><input type="checkbox" class="form-control" name="linjaauto" ng-model="rivi.linjaauto"></td>
-            <td><input type="checkbox" class="form-control" name="taksi" ng-model="rivi.taksi"></td>
+            <td><select name="suoritetyyppi" ng-model="rivi.suoritetyyppi">
+              <option value="0">Linjasuorite</option>
+              <option value="1">Sopimussuorite</option>
+              <option value="2">Kokonaissuorite</option>
+            </select></td>
+            <td><input name="linjaautot" type="text" class="form-control" numeric-integer-only="" select-on-click
+                       ng-model="rivi.linjaautot"></td>
+            <td><input name="taksit" type="text" class="form-control" numeric-integer-only="" select-on-click
+                       ng-model="rivi.taksit"></td>
             <td><input name="ajokm" type="text" class="form-control" numeric-km-only="" ng-currency=""
                        currency-symbol="km" noenter
                        select-on-click
