--- a/app/scripts/views/yhteinen/seurantalomakeDemo.html
+++ b/app/scripts/views/yhteinen/seurantalomakeDemo.html
@@ -5,4 +5,10 @@
       <juku-seurantalomake-paikallisliikenne></juku-seurantalomake-paikallisliikenne>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Seutulippu</h3>
+      <juku-seurantalomake-seutulippu></juku-seurantalomake-seutulippu>
+    </div>
+  </div>
 </div>
