--- a/app/scripts/components/seurantalomakeSeutulippu/index.html
+++ b/app/scripts/components/seurantalomakeSeutulippu/index.html
@@ -42,7 +42,7 @@
         <tfoot>
           <tr>
             <td colspan="8">
-              <button class="btn btn-primary" ng-click="lisaaRivi()">Lisää rivi</button>
+              <button class="btn btn-primary" ng-click="lisaaSeutulippuRivi()">Lisää rivi</button>
             </td>
           </tr>
         </tfoot>
@@ -69,7 +69,7 @@
             <td><input name="rahoitus" type="text" class="form-control" ng-currency="" numeric-only="" noenter
                        select-on-click
                        ng-model="rivi.rahoitus"></td>
-            <td><a href="" ng-click="poistaRivi($index)"><span class="glyphicon glyphicon-remove-sign"></span></a>
+            <td><a href="" ng-click="poistaSeutulippuRivi($index)"><span class="glyphicon glyphicon-remove-sign"></span></a>
             </td>
           </tr>
         </tbody>
