LIVIJUKU-407 - view-hakemus oikeus on kaikilla joilla on mikä tahansa hakemusten katseluoikeuksista

--- a/app/scripts/components/header/index.html
+++ b/app/scripts/components/header/index.html
@@ -32,7 +32,7 @@
           {{ ('hakemukset' | stateNameIncludes:['app.hakija.hakemukset.omat']) ||
              ('app.hakemus' | isState) && !isOwnApplication()
             | toClass:'is-active'
-          }}" ng-show="sallittu(user, 'view-kaikki-hakemukset')">
+          }}" ng-show="sallittu(user, 'view-hakemus')">
           <a class="header__link" ui-sref="app.yhteinen.hakemukset.list({tyyppi: 'AH0'})">
             Kaikki hakemukset
           </a>
