--- a/app/scripts/components/sidebar/index.html
+++ b/app/scripts/components/sidebar/index.html
@@ -10,7 +10,7 @@
         Omat hakemukset
       </a>
     </li>
-    <li ng-show="sallittu(user, 'view-kaikki-hakemukset')" ng-class="{'is-active': isActive('/y/hakemukset/AH0')}">
+    <li ng-show="sallittu(user, 'view-hakemus')" ng-class="{'is-active': isActive('/y/hakemukset/AH0')}">
       <a href="#/y/hakemukset/AH0" ng-href="#/y/hakemukset/AH0">
         Kaikki hakemukset
       </a>
