LIVIJUKU-407 - parempi ilmoitus käyttäjälle sisällön puuttumisesta

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -134,9 +134,8 @@
 
       <juku-form-row
         ng-hide="hakemus.contentvisible"
-        class="alert alert-danger">
-        <strong>Riittämättömät oikeudet</strong> <br/>
-        Keskeneräisen hakemuksen sisältö on näkyvissä vain hakijalle.
+        class="alert alert-warning">
+        <strong>Riittämättömät oikeudet!</strong> Keskeneräisen hakemuksen sisältö on näkyvissä vain hakijalle.
       </juku-form-row>
 
     </juku-form-section>
