Viimeisen kappaleen otsikon muodostumislogiikan yksinkertaistaminen

--- a/app/scripts/views/hakemus/index.html
+++ b/app/scripts/views/hakemus/index.html
@@ -227,7 +227,7 @@
 
     <juku-form-section>
       <h3>
-        HAKEMUKSEN PÄIVÄMÄÄRÄ JA {{ isHakija(user) ? 'HAKIJA' : 'ALLEKIRJOITTAJA' }}
+        HAKEMUKSEN PÄIVÄMÄÄRÄ JA HAKIJA
       </h3>
 
       <div class="row">
