--- a/app/scripts/views/kasittelija/hakemukset.html
+++ b/app/scripts/views/kasittelija/hakemukset.html
@@ -43,53 +43,54 @@
             </h4>
           </accordion-heading>
           <div class="row" ng-repeat="hakijatyyppi in constants.hakijaTyypit">
+            <div ng-if="hakemukset.hakemukset[hakemuskausi.vuosi][hakijatyyppi].length > 0">
+              <h4>{{hakijatyyppi | toApplicantName}}</h4>
 
-            <h4>{{hakijatyyppi | toApplicantName}}</h4>
-
-            <div class="row">
-              <div class="col-md-12">
-                <table
-                  st-table="displayedCollection"
-                  st-safe-src="hakemukset.hakemukset[hakemuskausi.vuosi][hakijatyyppi]"
-                  class="table table-hover">
-                  <thead>
-                  <tr>
-                    <th st-sort-default="true" st-sort="hakemukset.hakijanNimi">Hakija</th>
-                    <th st-sort="hakemustilatunnus">Hakemuksen tila</th>
-                    <th st-sort="muokkausaika">Viimeisin muutos</th>
-                    <th st-sort="diaarinumero">Diaarinumero</th>
-                    <th st-sort="kasittelijanimi">Käsittelijä</th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr ng-repeat="hakemus in displayedCollection"
-                      ng-click="hakemukset.siirryHakemukseen(hakemus, hakemuskausi, hakijatyyppi)">
-                    <td>{{hakemukset.hakijanNimi(hakemus)}}</td>
-                    <td>
-                      <hakemus-label tila="{{hakemus.hakemustilatunnus}}"></hakemus-label>
-                    </td>
-                    <td>{{hakemus.muokkausaika | date:'dd.MM.yyyy HH:mm:ss'}}</td>
-                    <td>{{hakemus.diaarinumero}}</td>
-                    <td>{{hakemus.kasittelijanimi}}</td>
-                  </tr>
-                  </tbody>
-                </table>
+              <div class="row">
+                <div class="col-md-12">
+                  <table
+                    st-table="displayedCollection"
+                    st-safe-src="hakemukset.hakemukset[hakemuskausi.vuosi][hakijatyyppi]"
+                    class="table table-hover">
+                    <thead>
+                    <tr>
+                      <th st-sort-default="true" st-sort="hakemukset.hakijanNimi">Hakija</th>
+                      <th st-sort="hakemustilatunnus">Hakemuksen tila</th>
+                      <th st-sort="muokkausaika">Viimeisin muutos</th>
+                      <th st-sort="diaarinumero">Diaarinumero</th>
+                      <th st-sort="kasittelijanimi">Käsittelijä</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="hakemus in displayedCollection"
+                        ng-click="hakemukset.siirryHakemukseen(hakemus, hakemuskausi, hakijatyyppi)">
+                      <td>{{hakemukset.hakijanNimi(hakemus)}}</td>
+                      <td>
+                        <hakemus-label tila="{{hakemus.hakemustilatunnus}}"></hakemus-label>
+                      </td>
+                      <td>{{hakemus.muokkausaika | date:'dd.MM.yyyy HH:mm:ss'}}</td>
+                      <td>{{hakemus.diaarinumero}}</td>
+                      <td>{{hakemus.kasittelijanimi}}</td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
-            </div>
 
-            <div class="row">
-              <div class="col-md-8"></div>
-              <div class="col-md-4">
-                <div class="pull-right">
-                  <juku-link-next
-                    ng-show="sallittu('kasittely-hakemus')"
-                    ui-sref="app.kasittelija.suunnittelu({
-                      vuosi: hakemuskausi.vuosi,
-                      tyyppi: hakemukset.tyyppi,
-                      lajitunnus: hakijatyyppi
-                    })">
-                    Suunnittelu ja päätöksenteko
-                  </juku-link-next>
+              <div class="row">
+                <div class="col-md-8"></div>
+                <div class="col-md-4">
+                  <div class="pull-right">
+                    <juku-link-next
+                      ng-show="sallittu('kasittely-hakemus')"
+                      ui-sref="app.kasittelija.suunnittelu({
+                        vuosi: hakemuskausi.vuosi,
+                        tyyppi: hakemukset.tyyppi,
+                        lajitunnus: hakijatyyppi
+                      })">
+                      Suunnittelu ja päätöksenteko
+                    </juku-link-next>
+                  </div>
                 </div>
               </div>
             </div>
