--- a/app/scripts/components/hakemusLabel/index.html
+++ b/app/scripts/components/hakemusLabel/index.html
@@ -6,6 +6,7 @@
   <span ng-switch-when="TV" class="label hakemus-tila-taydennetty">Täydennetty</span>
   <span ng-switch-when="P" class="label hakemus-tila-paatetty">Päätetty</span>
   <span ng-switch-when="M" class="label hakemus-tila-maksettu">Maksettu</span>
+  <span ng-switch-when="S" class="label hakemus-tila-eikaynnissa">Suljettu</span>
   <span ng-switch-when="0" class="label hakemus-tila-eikaynnissa">Ei käynnissä</span>
   <span ng-switch-when="FEK" class="label hakemus-tila-eikaynnissa">Ei käynnissä</span>
   <span ng-switch-default class="label label-default">Unknown</span>
